# Ray_Tracying

./: FeatureList.txt  FeatureList.txt.pages  System.txt  System.txt.pages
ASCII/: scene.json
Blend/: Antialiasing.blend  Antialiasing.blend1  Distributed.blend  Distributed.blend1  Test1.blend  Test1.blend1  Test2.blend  Test2.blend1  Untitled.blend  Untitled.blend1  dop.blend  dop.blend1  exporter.py  glossy_reflection.blend  glossy_reflection.blend1  motion_blur.blend  motion_blur.blend1  scene.blend  scene.blend1  scene.json
Code/: CMakeLists.txt  acceleration.cpp  acceleration.hpp  camera.cpp  camera.hpp  image.cpp  image.hpp  json_loader.cpp  json_loader.hpp  light.hpp  main.cpp  material.hpp  raytracer.cpp  raytracer.hpp  shapes.cpp  shapes.hpp  test  test_image.cpp
